@@ -323,7 +323,8 @@ public class DataStorage extends Storage {
     }
   }
 
-  public boolean isConversionNeeded(StorageDirectory sd) throws IOException {
+  @Override
+  public boolean isPreUpgradableLayout(StorageDirectory sd) throws IOException {
     File oldF = new File(sd.getRoot(), "storage");
     if (!oldF.exists())
       return false;
@@ -717,22 +718,6 @@ public class DataStorage extends Storage {
       for(int i = 0; i < otherNames.length; i++)
         linkBlocks(new File(from, otherNames[i]), 
             new File(to, otherNames[i]), oldLV, hl);
-    }
-  }
-
-  protected void corruptPreUpgradeStorage(File rootDir) throws IOException {
-    File oldF = new File(rootDir, "storage");
-    if (oldF.exists())
-      return;
-    // recreate old storage file to let pre-upgrade versions fail
-    if (!oldF.createNewFile())
-      throw new IOException("Cannot create file " + oldF);
-    RandomAccessFile oldFile = new RandomAccessFile(oldF, "rws");
-    // write new version into old storage file
-    try {
-      writeCorruptedData(oldFile);
-    } finally {
-      oldFile.close();
     }
   }
 
